fixup: s/Collectors.toList/toList/